--- a/inicio.html
+++ b/inicio.html
@@ -38,18 +38,18 @@
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="index.html">Computer Store</a>
       <ul class="nav justify-content-center mb-auto nav-masthead">
-        <li class="nav-item mx-1">
-          <a class="nav-link active" aria-current="page" href="#">Administrador</a>
-        </li>
-        <li class="nav-item mx-1">
-          <a class="nav-link" href="Inventario.html">Inventario</a>
-        </li>
-        <li class="nav-item mx-1">
-          <a class="nav-link" href="Utilidades.html">Utilidades</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li> -->
+          <li class="nav-item mx-1">
+             <a class="nav-link active" aria-current="page" href="#">Administrador</a>
+          </li>
+           <li class="nav-item mx-1">
+             <a class="nav-link" href="inventario.html">Inventario</a>
+           </li>
+          <li class="nav-item mx-1">
+               <a class="nav-link" href="utilidades.html">Utilidades</a>
+           </li>
+           <li class="nav-item mx-1">
+              <a class="nav-link" href="inicio.html">inicio</a>
+           </li>
       </ul>
     </nav>
 
