--- a/utilidades.html
+++ b/utilidades.html
@@ -34,22 +34,31 @@
 </head>
 
 <body class="d-flex h-100 text-center text-white bg-dark">
-
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <nav class="navbar navbar-dark bg-dark">
+  
+  <div class="cover-container d-flex w-100 h-25 p-3 mx-auto flex-column">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <a class="navbar-brand" href="#">
+       <img src="imagentienda.png" alt="Logo" style="width:120px;">
+     </a>
       <a class="navbar-brand" href="index.html">Computer Store</a>
       <ul class="nav justify-content-center mb-auto nav-masthead">
-          <li class="nav-item mx-1">
-             <a class="nav-link active" aria-current="page" href="#">Administrador</a>
-           </li>
-           <li class="nav-item mx-1">
-              <a class="nav-link" href="inventario.html">Inventario</a>
-            </li>
-            <li class="nav-item mx-1">
-              <a class="nav-link" href="utilidades.html">Utilidades</a>
-             </li>
+       <li class="nav-item mx-1">
+          <a class="nav-link active" aria-current="page" href="#">Administrador</a>
+       </li>
+       <li class="nav-item mx-1">
+          <a class="nav-link" href="inventario.html">Inventario</a>
+       </li>
+       <li class="nav-item mx-1">
+          <a class="nav-link" href="utilidades.html">Utilidades</a>
+          <div class="listaDesplegable">
+            <a href="calcularEquivalencia.html">Calcular Equivalencia</a>
+          </div>
+       </li>
+     </li>
       </ul>
-    </nav>
+   </nav>
+  
+    
     <div class="container">
       <div class="row">
         <div class="col-1"></div>
@@ -108,67 +117,7 @@
         </div>
       </div>
     </div>
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <div class="container">
-          <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10 login-box">
-              <div class="col-lg-12 login-title">
-                Calcular Equivalencia
-              </div>
-              <div class="col-lg-12 login-form">
-                <div class="col-lg-12 login-form">
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text text-white">$</span>
-                    </div>
-                    <input type="text" id="valor" name="valor" class="form-control text-center" type="number"
-                      placeholder="Valor de compra" aria-label="Dollar amount (with dot and two decimal places)">
-                  </div>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text text-white">%</span>
-                    </div>
-                    <input type="text" id="utilidad" name="utilidad" class="form-control text-center" type="number"
-                      placeholder="Utilidad o Ganancia" aria-label="Dollar amount (with dot and two decimal places)">
-                  </div>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text text-white">%</span>
-                    </div>
-                    <input type="text" id="iva" name="iva" class="form-control text-center" type="number" placeholder="IVA"
-                      aria-label="Dollar amount (with dot and two decimal places)">
-                  </div>
-                  <div class="col-lg-12 login-title mb-3">
-                    <button class="btn btn-sm btn-info text-white" onclick="calcular()">
-                      Calcular
-                    </button>
-                  </div>
-                  <div class="form-group">
-                    <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text text-white">$</span>
-                      </div>
-                      <input type="text" id="vlrVenta" name="vlrVenta" class="form-control text-center text-dark" disabled
-                        placeholder="Valor de Venta" aria-label="Dollar amount (with dot and two decimal places)">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text text-white">$</span>
-                      </div>
-                      <input type="text" id="ganancia" name="ganancia" class="form-control text-center text-dark" disabled
-                        placeholder="Ganancia" aria-label="Dollar amount (with dot and two decimal places)">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-    <div>
+  
       <footer class="mt-auto text-white-50">
       </footer>
     </div>
