--- a/utilidades.html
+++ b/utilidades.html
@@ -38,7 +38,7 @@
   <div class="cover-container d-flex w-100 h-25 p-3 mx-auto flex-column">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <a class="navbar-brand" href="#">
-       <img src="imagentienda.png" alt="Logo" style="width:120px;">
+       <img src="im.gif.crdownload" alt="Logo" style="width:120px;">
      </a>
       <a class="navbar-brand" href="index.html">Computer Store</a>
       <ul class="nav justify-content-center mb-auto nav-masthead">
